modules/noosphere/taghmata/nixidy/manifests/prod/searxng/Namespace-searxng.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: searxng
