modules/noosphere/taghmata/nixidy/manifests/prod/searxng/Service-searxng.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searxng
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: searxng
  type: ClusterIP
