modules/noosphere/taghmata/nixidy/manifests/prod/searxng/Service-valkey.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: searxng
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: searxng-valkey
  type: ClusterIP
