modules/noosphere/taghmata/nixidy/manifests/prod/searxng/Ingress-searxng-ip-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
    category: search
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    glance/description: Private Meta Search Engine
    glance/icon: di:searxng
    glance/id: searxng
    glance/name: Searxng
    glance/parent: searxng
    glance/url: https://searx.noosphere.uk
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: searxng-ip-root
  namespace: searxng
spec:
  ingressClassName: traefik
  rules:
    - host: searx.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: searxng
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - searx.noosphere.uk
      secretName: searxng-tls
